--- a/resources/[ox]/ox_inventory/web/src/index.scss
+++ b/resources/[ox]/ox_inventory/web/src/index.scss
@@ -1,18 +1,16 @@
 $mainColor: #22232c;
-$textColor: #c1c2c5;
-$mainFont: Roboto;
+$textColor: #ffffff;
+$mainFont: Pathway Gothic One;
 
-$secondaryColor: #22232c; /* durple #7 */
-$secondaryColorHighlight: #33343f; /* durple #3 */
-$secondaryColorLight: rgba(0, 0, 0, 0.5); /* isnt even used? */
-$secondaryColorDark: #33343f; /* durple #3 */
+$secondaryColor: rgba(12, 12, 12, 0.4);
+$secondaryColorHighlight: #33343f;
+$secondaryColorLight: rgba(0, 0, 0, 0.5);
+$secondaryColorDark: rgba(12, 12, 12, 0.8);
 
-$backgroundColor: #1f2027; /* durple #8 */
-
-$gridCols: 5;
-$gridRows: 5;
-$gridSize: 10.2vh;
-$gridGap: 2px;
+$gridCols: 4;
+$gridRows: 4;
+$gridSize: 12.2vh;
+$gridGap: 3px;
 $containerSize: calc(#{$gridRows} * #{$gridSize + 0.22vh} + #{$gridRows} * #{$gridGap});
 
 body {
@@ -123,8 +121,8 @@ button:active {
   justify-content: center;
   align-items: center;
   height: 100%;
-
   gap: 20px;
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .inventory-control {
@@ -141,12 +139,12 @@ button:active {
   .inventory-control-input {
     transition: 200ms;
     padding: 16px 8px;
-    border-radius: 0.5rem;
+    border-radius: 2.5%;
     font-family: $mainFont;
-    font-size: 16px;
+    font-size: 10px;
     text-align: center;
     outline: none;
-    border: none;
+    border: 2px solid #9ACD32;
     color: #fff;
     background-color: $secondaryColor;
     &:focus-within {
@@ -160,7 +158,7 @@ button:active {
     background-color: $secondaryColor;
     transition: 200ms;
     padding: 12px 8px;
-    border-radius: 0.5rem;
+    border-radius: 2.5%;
     border: none;
     text-transform: uppercase;
     font-family: $mainFont;
@@ -258,49 +256,103 @@ button:active {
 // Dialog is used fro useful controls window
 
 // inventory grids
-.inventory-grid-wrapper {
+.inventory-grid-wrapper:nth-child(1){
   display: flex;
   flex-direction: column;
-  gap: calc($gridGap * 2);
-  background-color: $backgroundColor;
-  padding: 0.625rem;
-  border-radius: 0.5rem;
+  gap: 4px;
+  background: rgba(39,39,39,.9);
+  border: 2px solid #9ACD32;
+  /* padding: 15px; */
+  box-sizing: border-box;
+  box-shadow: -1px -13px 9px -15px #f5f5f5;
+  border-radius: 8px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  transform: rotateX(5deg) rotateY(20deg) rotate(1deg) translateZ(-30px);
+  transition: transform .4s ease-in-out;
+  overflow: hidden;
+  color: #fff;
+  position: absolute;
+  left: 60px;
+  height: 565px;
 }
+.inventory-grid-wrapper:nth-last-child(1){
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  background: rgba(39,39,39,.9);
+  border: 2px solid #9ACD32;
+  /* padding: 15px; */
+  box-sizing: border-box;
+  /* box-shadow: 2px -3px 10px 1px #f5f5f5; */
+  height: 565px;
+  border-radius: 8px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  transform: rotateX(-15deg) rotateY(15deg) rotate(1deg) translateZ(-8px);
+  transition: transform .4s ease-in-out;
+  overflow: hidden;
+  color: #fff;
+  position: absolute;
+  right: 60px;
+}
+
 .inventory-grid-header-wrapper {
+  padding-top:10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   p {
-    font-size: 16px;
+    font-size: 20px;
   }
+  // -webkit-transform: skew(5deg);
+	// -moz-transform: skew(5deg); 
+	// -o-transform: skew(10deg); 
 }
 
 .inventory-grid-container {
   display: grid;
   height: $containerSize;
   grid-template-columns: repeat($gridCols, $gridSize);
-  grid-auto-rows: $gridSize + 0.22vh;
+  grid-auto-rows: $gridSize - 1vh;
   gap: $gridGap;
   overflow-y: scroll;
+  padding: 5px; 
 }
 
 // inventory slots
 .inventory-slot {
-  background-color: $secondaryColor;
+  background-color: rgba(12, 12, 12, 0.5);
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 0.5rem;
+  /* border-radius: 2.5%; */
   image-rendering: -webkit-optimize-contrast;
   position: relative;
   background-size: 7vh;
-  color: $textColor;
+  color: #ffffff;
+  /* border-color: rgb(255 0 0 / 20%); */
+  /* border-style: inset; */
+  /* border-width: 1px; */
+  /* border-radius: 10px; */
+  margin: 2px 4px;
+  /* box-shadow: 4px 4px rgba(108, 88, 88, 0.4); */
+  -webkit-font-smoothing: none;
+  box-shadow: 1px 0px 1px 2px #585858;
+  -webkit-font-smoothing: subpixel-antialiased;
+  
 }
 
 .inventory-slot-label-box {
-  background-color: $mainColor;
   color: $textColor;
   text-align: center;
-  border-radius: 0.5rem;
+  border-bottom-left-radius: 0.25vh;
+  border-bottom-right-radius: 0.25vh;
+  border-top-color: rgba(0, 0, 0, 0.2);
+  border-top-style: inset;
+  border-top-width: 1px;
 }
 
 .inventory-slot-label-text {
@@ -311,17 +363,15 @@ button:active {
   padding: 2px 3px;
   font-weight: 400;
   font-family: $mainFont;
-  font-size: 12px;
+  text-align: left;
 }
 
 .inventory-slot-number {
-  background-color: #21334b;
-  color: #a5d8ff;
+  color: white;
   height: 12px;
-  border-radius: 0.25vh;
-  border-top-left-radius: 0.5rem;
+  border-top-left-radius: 0.25vh;
+  border-bottom-right-radius: 0.25vh;
   padding: 3px;
-  font-size: 12px;
   font-family: $mainFont;
 }
 
@@ -483,7 +533,8 @@ button:active {
   background-color: $secondaryColor;
   text-transform: uppercase;
   text-align: center;
-  border-radius: 0.5rem;
+  border-top-left-radius: 0.25vh;
+  border-top-right-radius: 0.25vh;
   font-family: $mainFont;
   p {
     font-size: 11px;
@@ -499,18 +550,24 @@ button:active {
 }
 
 .durability-bar {
-  background: #33343f;
+  background: rgba(0, 0, 0, 0.5);
   height: 3px;
-  border-radius: 0.25rem;
   overflow: hidden;
 }
 
 .weight-bar {
-  background: #33343f;
+  background: rgba(0, 0, 0, 0.4); 
+  border: 2px solid #736b6b; 
   height: 0.8vh;
-  border-radius: 0.25rem;
-  overflow: hidden;
+  border-radius: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  overflow: hidden; 
+  margin-left: 12px;
+  margin-right: 11px;
+  margin-top: 5px;
 }
+
 
 .transition-fade-enter {
   opacity: 0;
