--- a/resources/[ox]/ox_lib/web/src/index.css
+++ b/resources/[ox]/ox_lib/web/src/index.css
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url("https://use.typekit.net/wxh5ury.css");
-@import url("https://use.typekit.net/qgr5ebd.css");
+@import url('https://use.typekit.net/wxh5ury.css');
+@import url('https://use.typekit.net/qgr5ebd.css');
 
 html {
   color-scheme: normal !important;
@@ -14,8 +14,8 @@ html {
 body {
   background: none !important;
   margin: 0;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
@@ -53,11 +53,11 @@ code {
 }
 
 .toast-inform {
-  background-color: #2B78FC;
+  background-color: #2b78fc;
 }
 
 .toast-success {
-  background-color: #06CE6B;
+  background-color: #06ce6b;
 }
 
 .toast-error {
@@ -66,20 +66,21 @@ code {
 
 .mantine-InputWrapper-label,
 .mantine-TimeInput-label {
-  color: #F2F2F2;
+  color: #f2f2f2;
 }
 
 .mantine-Input-input,
 .mantine-TextInput-input {
-  background-color: #242424;
-  color: #C1C1C1;
-  font-size: 16px;
-  border: none,
+  background: linear-gradient(#242424, #242424) padding-box, linear-gradient(90deg, #00ccff, #0051ff) border-box;
+  color: #c1c1c1;
+  font-size: 15px;
+  border: 2px solid transparent;
+  border-radius: 3px;
 }
 
 .mantine-InputWrapper-description,
 .mantine-TextInput-description,
 .mantine-Checkbox-label {
-  color: #F2F2F2;
-  border: none,
+  color: #f2f2f2;
+  border: none;
 }
